# tree_magic_rs

./: CHANGELOG.md  Cargo.toml  README.md
benches/: from_u8.rs  match_u8.rs
magic_db/: Cargo.toml  README.md
magic_db/src/: lib.rs
src/: lib.rs  main.rs
src/basetype/: check.rs  init.rs
src/fdo_magic/: check.rs  mod.rs  ruleset.rs
src/fdo_magic/builtin/: check.rs  init.rs  mod.rs  runtime.rs
tests/: from_filepath.rs  from_u8.rs  match_u8.rs
tree_magic_rs/: Cargo.toml  README.md
tree_magic_rs/src/: db_guts.rs  lib.rs  tree_magic.rs
tree_magic_rs/src/basetype/: check.rs  init.rs  mod.rs
tree_magic_rs/src/db/: borrowed_db_types.rs  buildable_db_provider.rs  db_traits.rs  mod.rs  owned_db_types.rs  stacked_db_provider.rs
tree_magic_rs/src/db/mime_cache_db_provider/: mime_cache_db_provider.rs
tree_magic_rs/src/db/shared_mime_db/: mime_db.rs  mod.rs  parse_magic_rule.rs  shared_mime_db_provider.rs  shared_mime_db_types.rs
tree_magic_rs/src/fdo_magic/: mod.rs  ruleset.rs
tree_magic_rs/src/fdo_magic/builtin/: check.rs  init.rs  mod.rs  runtime.rs
tree_magic_rs/tests/: from_filepath.rs  from_u8.rs  match_u8.rs
