[package]
name = "tree_magic"
version = "0.3.0"
authors = ["Allison Hancock <aahancoc@umich.edu>"]
description = "Determines the MIME type of a file by traversing a filetype tree."
repository = "https://github.com/aahancoc/tree_magic/"
documentation = "https://docs.rs/tree_magic/"
readme = "README.md"
keywords = ["mime", "filesystem", "media-types"]
license = "MIT"
exclude = ["tests/*", "benches/*"]
edition = "2018"
publish = false

[dependencies]
petgraph = "^0.5"
nom = "5.1"
lazy_static = "^1.4"
fnv = "^1"

[dev-dependencies]
bencher = "^0.1"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[[bench]]
name = "from_u8"
harness = false

[[bench]]
name = "match_u8"
harness = false
