[package]
name = "tree_magic_mini"
version = "3.0.2"
authors = [
    "Matt Brubeck <mbrubeck@limpet.net>",
    "Allison Hancock <aahancoc@umich.edu>",
]
description = "Determines the MIME type of a file by traversing a filetype tree."
repository = "https://github.com/mbrubeck/tree_magic/"
documentation = "https://docs.rs/tree_magic_mini/"
readme = "README.md"
keywords = ["mime", "filesystem", "media-types"]
license = "MIT"
exclude = ["tests/*", "benches/*/"]
edition = "2018"

[dependencies]
petgraph = "0.6.0"
nom = "7.0"
lazy_static = "1.4"
fnv = "1.0"
bytecount = "0.6.0"
once_cell = "1.0"
tree_magic_db = { version = "3.0", path = "./magic_db" , optional = true }

[features]
with-gpl-data = ["tree_magic_db"]

[dev-dependencies]
bencher = "0.1.0"

[workspace]
members = ["magic_db"]

[[bench]]
name = "from_u8"
harness = false

[[bench]]
name = "match_u8"
harness = false
