[package]
name = "tree_magic_mini_rs"
version = "0.0.1"
authors = [
    "Matt Brubeck <mbrubeck@limpet.net>",
    "Allison Hancock <aahancoc@umich.edu>",
    "raldone01 <raldone01@gmail.com>",
]
description = "Determines the MIME type of a file by traversing a filetype tree."
repository = "https://github.com/raldone01/tree_magic_mini_rs/"
documentation = "https://docs.rs/tree_magic_mini_rs/"
readme = "README.md"
keywords = ["mime", "filesystem", "media-types"]
license = "MIT"
exclude = ["tests/*", "benches/*/"]
edition = "2018"

[dependencies]
petgraph = "0.6.0"
nom = "7.0"
lazy_static = "1.4"
fnv = "1.0"
bytecount = "0.6.0"
once_cell = "1.0"

[dev-dependencies]
bencher = "0.1.0"

[[bench]]
name = "from_u8"
harness = false

[[bench]]
name = "match_u8"
harness = false
